[package]
name = "cuda-energy"
version = "0.1.0"
edition = "2021"
description = "ATP budgets, circadian rhythm, apoptosis, epigenetic memory"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-energy"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
